# glowbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  package.json
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  ci.yaml  cve-scan.yaml  dockerimage.yaml  pages.yaml  release.yaml
backend/: CLAUDE.md  Cargo.toml
backend/src/: config.rs  lib.rs  main.rs  routes.rs
docs/: ROADMAP.md
examples/svelte-gallery/: eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
examples/svelte-gallery/e2e/: gallery.spec.ts  nixie.spec.ts
examples/svelte-gallery/src/: app.html
examples/svelte-gallery/src/lib/: theme.svelte.ts
examples/svelte-gallery/src/lib/components/: CoreNav.svelte  NixieScene3D.svelte  Select.svelte  Slider.svelte  ThemeToggle.svelte
examples/svelte-gallery/src/lib/examples/: attractor.ts  gif.ts  model.ts  pacman.ts  rain.ts  scroller.ts  torus.ts  wave.ts  wormhole.ts  xwing.glb
examples/svelte-gallery/src/lib/three/: nixieScene.ts
examples/svelte-gallery/src/routes/: +layout.ts  +page.svelte
examples/svelte-gallery/src/routes/nixie/: +page.svelte
examples/svelte-gallery/static/: manifest.webmanifest
frontend/: CLAUDE.md  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/examples/: pacman.ts  torus.ts
frontend/src/lib/led-grid/: index.ts
frontend/src/lib/led-grid/core/: index.ts  led-display.ts  renderer.ts
frontend/src/lib/led-grid/svelte/: LedGrid.svelte  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.webmanifest
scripts/: bench-led-grid.mjs  publish-smoke.mjs
