[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "tokio", "tracing"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "set-header"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
sha2 = "0.11"
base64 = "0.22"
dotenvy = "0.15"
