[package]
name = "blowbox-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "blowbox-backend"
path = "src/main.rs"

[lib]
name = "blowbox_backend"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mime_guess = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }
